@@ -1,11 +1,11 @@
 package com.example.goodnight3rdhackathonbackend.repository;
 
 import com.example.goodnight3rdhackathonbackend.domain.Wish;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Repository
 public class MemoryWishRepository implements WishRepository {
@@ -32,8 +32,12 @@ public class MemoryWishRepository implements WishRepository {
     }
 
     @Override
-    public List<Wish> findAll() {
-        return memory.values().stream().toList();
+    public List<Wish> findAll(Pageable pageable) {
+        return memory.values().stream()
+                .sorted(Comparator.comparing(Wish::getId).reversed())
+                        .skip((long) pageable.getPageNumber() * pageable.getPageSize())
+                        .limit(pageable.getPageSize())
+                        .collect(Collectors.toList());
     }
 
 
